--- a/src/app/plugins/authentication/components/forgot-password/forgot-password.component.html
+++ b/src/app/plugins/authentication/components/forgot-password/forgot-password.component.html
@@ -13,16 +13,9 @@
       formControlName="email"
       [ngClass]="{ 'is-invalid': formSubmitted && f.email.errors }"
       placeholder="email@example.com"
-      placement="left"
-      ngbTooltip="Email is invalid"
-      [autoClose]="false"
-      triggers="manual"
-      #emailTooltip="ngbTooltip"
-      tooltipClass="warning-tooltip"
-      (keyup)="checkIfEmailStillInvalid(emailTooltip)"
       >
   </div>
-  <button type="submit" class="btn btn-primary" (click)="resetPassword(emailTooltip)">Reset Password</button>
+  <button type="submit" class="btn btn-primary" (click)="resetPassword()">Reset Password</button>
   <span class="px-1"></span>
   <button type="submit" class="btn btn-primary" (click)="cancel()">Cancel</button>
 </form>
