--- a/src/app/plugins/authentication/components/change-password/change-password.component.html
+++ b/src/app/plugins/authentication/components/change-password/change-password.component.html
@@ -16,15 +16,9 @@
       formControlName="oldPassword"
       [ngClass]="{ 'is-invalid': formSubmitted && f.oldPassword.errors }"
       placeholder="current password"
-      placement="left"
-      ngbTooltip="Current password is too short"
-      [autoClose]="false"
-      triggers="manual"
-      #oldPasswordTooltip="ngbTooltip"
-      tooltipClass="warning-tooltip"
-      (keyup)="checkIfOldPasswordStillInvalid(oldPasswordTooltip)"
       >
   </div>
+
   <div class="form-group">
     <label for="field-password">Password</label>
     <input
@@ -34,13 +28,6 @@
       formControlName="password"
       [ngClass]="{ 'is-invalid': formSubmitted && f.password.errors }"
       placeholder="password"
-      placement="left"
-      ngbTooltip="Password is too short"
-      [autoClose]="false"
-      triggers="manual"
-      #passwordTooltip="ngbTooltip"
-      tooltipClass="warning-tooltip"
-      (keyup)="checkIfPasswordStillInvalid(passwordTooltip)"
       >
   </div>
   <div class="form-group">
@@ -52,16 +39,9 @@
       formControlName="passwordConfirmation"
       [ngClass]="{ 'is-invalid': formSubmitted && f.passwordConfirmation.errors }"
       placeholder="repeat password"
-      placement="left"
-      ngbTooltip="Passwords do not match"
-      [autoClose]="false"
-      triggers="manual"
-      #passwordConfirmationTooltip="ngbTooltip"
-      tooltipClass="warning-tooltip"
-      (keyup)="checkIfPasswordConfirmationStillInvalid(passwordConfirmationTooltip)"
       >
   </div>
-  <button type="submit" class="btn btn-primary" (click)="changePassword(oldPasswordTooltip, passwordTooltip, passwordConfirmationTooltip)">Change Password</button>
+  <button type="submit" class="btn btn-primary" (click)="changePassword()">Change Password</button>
   <span class="px-1"></span>
   <button type="submit" class="btn btn-primary" (click)="cancel()">Cancel</button>
 </form>
