--- a/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
+++ b/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
@@ -26,9 +26,9 @@
                 class="form-control"
                 placeholder="yyyy-mm-dd"
                 name="dp"
-                ngbDatepicker #d="ngbDatepicker" [readonly]="true" (dateSelect)="onDateSelected($event)">
+                [readonly]="true" (dateSelect)="onDateSelected($event)">
               <div class="input-group-append">
-                <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button"><i class="fa fa-calendar"></i></button>
+                <button class="btn btn-outline-secondary" type="button"><i class="fa fa-calendar"></i></button>
               </div>
             </div>
           </div>
