navbar and sidebar layout in tailwind

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,23 +1,34 @@
 <div class="fixed z-30 w-screen">
-  <nav class="bg-orange-600">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex items-center justify-between h-16">
+  <div class="flex flex-row">
+    <div class="flex-grow-0 w-64 bg-orange-600">
+      <div class="flex justify-between h-16">
         <div class="flex items-center">
-          <div class="flex-shrink-0">
-            <h1 class="text-2xl md:text-3xl xl:text-3xl font-bold leading-tight text-green-100 text-shadow">
-              <span class="text-green-50">
-                FormKiQ
+          <div class="flex-grow h-16 w-12 text-green-100 bg-orange-600">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" class="fill-current">
+              <path d="M7.105,25.789l24,12C31.387,37.93,31.693,38,32,38s0.613-0.07,0.895-0.211l24-12C57.572,25.45,58,24.757,58,24    s-0.428-1.45-1.105-1.789l-24-12c-0.563-0.281-1.226-0.281-1.789,0l-24,12C6.428,22.55,6,23.243,6,24S6.428,25.45,7.105,25.789z     M32,14.236L51.528,24L32,33.764L12.472,24L32,14.236z"></path>
+              <path d="M55.105,30.211L32,41.764L8.895,30.211c-0.987-0.493-2.189-0.093-2.684,0.895c-0.494,0.988-0.093,2.189,0.895,2.684l24,12    C31.387,45.93,31.693,46,32,46s0.613-0.07,0.895-0.211l24-12c0.988-0.494,1.389-1.695,0.895-2.684    C57.295,30.119,56.096,29.715,55.105,30.211z"></path>
+              <path d="M55.105,38.211L32,49.764L8.895,38.211c-0.987-0.493-2.189-0.094-2.684,0.895c-0.494,0.988-0.093,2.189,0.895,2.684l24,12    C31.387,53.93,31.693,54,32,54s0.613-0.07,0.895-0.211l24-12c0.988-0.494,1.389-1.695,0.895-2.684    C57.295,38.118,56.096,37.716,55.105,38.211z"></path>
+            </svg>
+          </div>
+          <div class="h-16 w-32 bg-orange-600">
+            <h1 class="text-xl font-bold leading-tight text-green-100 text-shadow">
+              <span class="text-green-50 tracking-tight">
+                FormKiQ Stacks
               </span>
-              Stacks
-              <span class="text-green-50">
+              <br />
+              <span class="tracking-wider uppercase">
                 Console
               </span>
             </h1>
           </div>
-          <div class="hidden ml-8 lg:block">
+          <div class="h-16 w-16 bg-orange-600">
+            c
           </div>
         </div>
       </div>
     </div>
-  </nav>
+    <div class="flex-grow bg-orangeGray-500 border-l border-green-50">
+      ssdds
+    </div>
+  </div>
 </div>
