--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,198 +1,14 @@
-<nav id="sidebar" *ngIf="isSidebarToggled" class="navbar pl-3 pr-0 formkiq-font navbar-dark formkiq-dark-blue-background">
-  <ul *ngIf="!authenticationService.requireAuthenticationForRead || authenticationService.loggedInUser != null" class="navbar-nav mr-auto">
-    <li class="nav-item" [ngClass]="{ 'active': currentUrl == '/' }">
-      <a class="nav-link"
-        [routerLink]="['/']"
-        (click)="emitSidebarItemClick()">
-        Dashboard <span *ngIf="currentUrl == '/'" class="sr-only">(current)</span>
-      </a>
-    </li>
-    <li class="nav-item"  [ngClass]="{ 'active': currentUrl == '/documents' }">
-      <a class="nav-link"
-        [routerLink]="['/documents']"
-        (click)="emitSidebarItemClick()">
-        Documents <span *ngIf="currentUrl == '/documents'" class="sr-only">(current)</span>
-      </a>
-    </li>
-    <div class="subnav-container has-scrollbar">
-      <li *ngIf="currentUrl.indexOf('/documents') == 0" class="nav-item nav-sub-item" [ngClass]="{ 'active': currentUrl == '/documents/add' }">
-        <a class="nav-link"
-          [routerLink]="['/documents/add']"
-          (click)="emitSidebarItemClick()">
-          Add Documents <span *ngIf="currentUrl == '/documents/add'" class="sr-only">(current)</span>
-        </a>
-      </li>
-    </div>
-    <li class="nav-item"  [ngClass]="{ 'active': currentUrl == '/api' }">
-      <a class="nav-link"
-        [routerLink]="['/api']"
-        (click)="emitSidebarItemClick('apiTopClicked')">
-        API <span *ngIf="currentUrl == '/api'" class="sr-only">(current)</span>
-      </a>
-    </li>
-    <div #apiSubnav class="subnav-container has-scrollbar">
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item-header pr-1" [ngClass]="{ 'active': currentUrl == '/api/#documents' }">
-        <a #headerDocuments class="nav-link"
-          [routerLink]="['/api']"
-          fragment="documents"
-          (click)="emitSidebarItemClick('apiHeaderDocumentsClicked');">
-          DOCUMENTS
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#GET-documents' }">
-        <a #getDocuments class="nav-link"
-          [routerLink]="['/api']"
-          fragment="GET-documents"
-          (click)="emitSidebarItemClick('apiGetDocumentsClicked');">
-          GET
-          <br />
-          /documents
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#POST-document' }">
-        <a #postDocument class="nav-link"
-          [routerLink]="['/api']"
-          fragment="POST-document"
-          (click)="emitSidebarItemClick('apiPostDocumentClicked')">
-          POST
-          <br />
-          /documents
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#GET-document' }">
-        <a #getDocument class="nav-link"
-          [routerLink]="['/api']"
-          fragment="GET-document"
-          (click)="emitSidebarItemClick('apiGetDocumentClicked')">
-          GET
-          <br />
-          /documents/<span class="api-method-parameter">DOCU_ID</span>
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#PATCH-document' }">
-        <a #patchDocument class="nav-link"
-          [routerLink]="['/api']"
-          fragment="PATCH-document"
-          (click)="emitSidebarItemClick('apiPatchDocumentClicked')">
-          PATCH
-          <br />
-          /documents/<span class="api-method-parameter">DOCU_ID</span>
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#DELETE-document' }">
-        <a #deleteDocument class="nav-link"
-          [routerLink]="['/api']"
-          fragment="DELETE-document"
-          (click)="emitSidebarItemClick('apiDeleteDocumentClicked')">
-          DELETE
-          <br />
-          /documents/<span class="api-method-parameter">DOCU_ID</span>
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#GET-document-url' }">
-        <a #getDocumentUrl class="nav-link"
-          [routerLink]="['/api']"
-          fragment="GET-document-url"
-          (click)="emitSidebarItemClick('apiGetDocumentUrlClicked')">
-          GET
-          <br />
-          /documents/<span class="api-method-parameter">DOCU_ID</span>/url
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#GET-document-tags' }">
-        <a class="nav-link"
-          [routerLink]="['/api']"
-          fragment="GET-document-tags"
-          (click)="emitSidebarItemClick('apiGetDocumentTagsClicked')">
-          GET
-          <br />
-          /documents/<span class="api-method-parameter">DOCU_ID</span>/tags
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#POST-document-tag' }">
-        <a class="nav-link"
-          [routerLink]="['/api']"
-          fragment="POST-document-tag"
-          (click)="emitSidebarItemClick('apiPostDocumentTagClicked')">
-          POST
-          <br />
-          /documents/<span class="api-method-parameter">DOCU_ID</span>/tags
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#GET-document-tag' }">
-        <a class="nav-link"
-          [routerLink]="['/api']"
-          fragment="GET-document-tag"
-          (click)="emitSidebarItemClick('apiGetDocumentTagClicked')">
-          GET
-          <br />
-          /documents/<span class="api-method-parameter">DOCU_ID</span>
-          <br />
-          /tags/<span class="api-method-parameter">TAG_KEY</span>
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#DELETE-document-tag' }">
-        <a class="nav-link"
-          [routerLink]="['/api']"
-          fragment="DELETE-document-tag"
-          (click)="emitSidebarItemClick('apiDeleteDocumentTagClicked')">
-          DELETE
-          <br />
-          /documents/<span class="api-method-parameter">DOCU_ID</span>
-          <br />
-          /tags/<span class="api-method-parameter">TAG_KEY</span>
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#GET-documents-upload' }">
-        <a class="nav-link"
-          [routerLink]="['/api']"
-          fragment="GET-documents-upload"
-          (click)="emitSidebarItemClick('apiGetDocumentsUploadClicked')">
-          GET
-          <br />
-          /documents/upload
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#GET-document-upload' }">
-        <a class="nav-link"
-          [routerLink]="['/api']"
-          fragment="GET-document-upload"
-          (click)="emitSidebarItemClick('apiGetDocumentUploadClicked')">
-          GET
-          <br />
-          /documents/<span class="api-method-parameter">DOCU_ID</span>/upload
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item-header pt-1 pr-1" [ngClass]="{ 'active': currentUrl == '/api/#search' }">
-        <a #headerSearch class="nav-link"
-          [routerLink]="['/api']"
-          fragment="search"
-          (click)="emitSidebarItemClick('apiHeaderSearchClicked')">
-          SEARCH
-        </a>
-      </li>
-      <li *ngIf="currentUrl.indexOf('/api') == 0" class="nav-item nav-sub-item pr-1" [ngClass]="{ 'active': currentUrl == '/api/#POST-search' }">
-        <a class="nav-link"
-          [routerLink]="['/api']"
-          fragment="POST-search"
-          (click)="emitSidebarItemClick('apiPostSearchClicked')">
-          POST
-          <br />
-          /search
-        </a>
-      </li>
-    </div>
-    <li *ngIf="authenticationService.loggedInUser != null" class="nav-item" [ngClass]="{ 'active': currentUrl == '/signOut' }">
-      <a class="nav-link"
-        [routerLink]="['/signOut']"
-        (click)="signOut();emitSidebarItemClick()">
-        Sign Out <span *ngIf="currentUrl == '/signOut'" class="sr-only">(current)</span>
-      </a>
+<nav *ngIf="isSidebarToggled">
+  <ul *ngIf="authenticationService.loggedInUser != null">
+    <li>
+      GOAT
     </li>
   </ul>
 </nav>
 <footer>
-  Console version:
-  <span class="version">{{ version }}</span>
+  <p class="text-base">
+    Console version:
+    <span class="font-bold">{{ version }}</span>
+  </p>
 </footer>
 
