--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
-<app-navbar (toggleSidebarEmitter)="toggleSidebar()" [isSidebarToggled]="isSidebarToggled"></app-navbar>
-<div class="wrapper">
-  <app-sidebar (sidebarItemClickEmitter)="onSidebarItemClick()" [isSidebarToggled]="isSidebarToggled"></app-sidebar>
-  <div class="main-content stretch-width has-scrollbar has-scrollbar-light-bg">
-    <router-outlet></router-outlet>
+<div>
+  <app-navbar (toggleSidebarEmitter)="toggleSidebar()" [isSidebarToggled]="isSidebarToggled"></app-navbar>
+</div>
+<div>
+  <div class="flex flex-row h-screen">
+    <div class="mt-16 w-64 bg-orange-600">
+      <app-sidebar (sidebarItemClickEmitter)="onSidebarItemClick()" [isSidebarToggled]="isSidebarToggled"></app-sidebar>
+    </div>
+    <div class="mt-16 w-auto">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
