--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -5,8 +5,8 @@
     </li>
   </ul>
 </nav>
-<footer>
-  <p class="text-base">
+<footer class="absolute bottom-0">
+  <p class="text-base text-gray-900 mx-2 mb-2">
     Console version:
     <span class="font-bold">{{ version }}</span>
   </p>
