--- a/src/styles-variables.scss
+++ b/src/styles-variables.scss
@@ -1,3 +1,12 @@
+$hamburger-layer-width: 20px;
+$hamburger-layer-height: 3px;
+$hamburger-layer-spacing: 3px;
+$hamburger-padding-x: 4px;
+$hamburger-padding-y: 3px;
+
+
+/*
+
 $resolution-blue: #2E4272;
 $ship-cove-blue: #7887ab;
 $ship-cove-blue-darker: #495466;
@@ -22,3 +31,4 @@ $hamburger-layer-spacing: 2.6px;
 $hamburger-layer-color: $light-steel-blue;
 $hamburger-padding-x: 4px;
 $hamburger-padding-y: 3px;
+*/
