--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,18 +1,24 @@
 <div class="fixed z-30 w-screen">
   <div class="flex flex-row">
-    <div class="flex-grow-0 w-64 bg-orange-600">
-      <div class="flex justify-between h-16">
-        <div class="flex items-center">
-          <div class="flex-grow h-16 w-12 text-green-100 bg-orange-600">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" class="fill-current">
+    <div class="flex-grow-0 w-full md:w-64 bg-orange-600">
+        <div class="flex h-16 flex-row items-center w-full">
+          <div
+            class="flex-grow-0 h-12 w-20 text-green-100 md:w-12"
+            >
+            <svg xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 64 64"
+              class="mx-auto h-12 w-12 md:w-10 fill-current"
+              >
               <path d="M7.105,25.789l24,12C31.387,37.93,31.693,38,32,38s0.613-0.07,0.895-0.211l24-12C57.572,25.45,58,24.757,58,24    s-0.428-1.45-1.105-1.789l-24-12c-0.563-0.281-1.226-0.281-1.789,0l-24,12C6.428,22.55,6,23.243,6,24S6.428,25.45,7.105,25.789z     M32,14.236L51.528,24L32,33.764L12.472,24L32,14.236z"></path>
               <path d="M55.105,30.211L32,41.764L8.895,30.211c-0.987-0.493-2.189-0.093-2.684,0.895c-0.494,0.988-0.093,2.189,0.895,2.684l24,12    C31.387,45.93,31.693,46,32,46s0.613-0.07,0.895-0.211l24-12c0.988-0.494,1.389-1.695,0.895-2.684    C57.295,30.119,56.096,29.715,55.105,30.211z"></path>
               <path d="M55.105,38.211L32,49.764L8.895,38.211c-0.987-0.493-2.189-0.094-2.684,0.895c-0.494,0.988-0.093,2.189,0.895,2.684l24,12    C31.387,53.93,31.693,54,32,54s0.613-0.07,0.895-0.211l24-12c0.988-0.494,1.389-1.695,0.895-2.684    C57.295,38.118,56.096,37.716,55.105,38.211z"></path>
             </svg>
           </div>
-          <div class="h-16 w-32 bg-orange-600">
-            <h1 class="text-xl font-bold leading-tight text-green-100 text-shadow">
-              <span class="text-green-50 tracking-tight">
+          <div class="flex-grow text-center">
+            <h1
+              class="text-lg font-bold leading-tight text-green-100 text-shadow md:text-base lg:text-lg"
+              >
+              <span class="text-yellowGray-500 tracking-tight">
                 FormKiQ Stacks
               </span>
               <br />
@@ -21,14 +27,53 @@
               </span>
             </h1>
           </div>
-          <div class="h-16 w-16 bg-orange-600">
-            c
+          <div class="flex-grow-0 text-right w-20 md:w-12 pt-1 pr-2">
+            <button
+              class="hamburger hamburger--stand"
+              [ngClass]="{'is-active': isSidebarToggled}"
+              (click)="toggleSidebar()"
+              >
+              <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+              </span>
+            </button>
           </div>
+      </div>
+    </div>
+    <div class="hidden md:block flex-grow items-center h-100 bg-orangeGray-500 border-l border-green-50">
+      <div class="flex justify-end items-center">
+        <div *ngIf="authenticationService.loggedInUser" class="py-2 pr-4">
+          <a
+            class="w-full flex items-center justify-center px-6 py-2 border border-transparent text-base leading-6 font-medium
+              rounded-md text-orange-900 border-yellowGray-500 bg-orange-500
+              hover:text-yellowGray-500 hover:bg-orange-700 focus:outline-none focus:shadow-outline
+              transition duration-150 ease-in-out"
+            href="JavaScript://"
+            (click)="signOut()"
+            >
+            Sign Out</a>
         </div>
       </div>
     </div>
-    <div class="flex-grow bg-orangeGray-500 border-l border-green-50">
-      ssdds
-    </div>
   </div>
+</div>
+<div
+  class="w-full fixed top-0 z-50 mt-16 border border-yellowGray-500"
+  *ngIf="notificationInfo != null"
+  >
+  <label
+    class="close cursor-pointer flex items-center justify-between mx-4 p-2 shadow text-white"
+    [ngClass]="{
+      'bg-red-600': notificationInfo.type === 'danger',
+      'bg-green-600': notificationInfo.type === 'success',
+      'bg-yellowGray-400': notificationInfo.type === 'warning',
+      'bg-indigo-600': notificationInfo.type === 'info'
+      }"
+    title="close"
+    >
+    {{ notificationInfo.message }}
+    <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+      <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
+    </svg>
+  </label>
 </div>
