--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,22 @@
-<div class="mt-4">
-  <h2 class="formkiq-font">FormKiQ Console</h2>
-  <h3>
-    You can
-    <a [routerLink]="['/documents']">
-    search documents</a>
-    or
-    <a [routerLink]="['/documents/add']">
-    add new documents</a>
-    to the Document Stack, as well as
-    <a [routerLink]="['/api']">
-    explore the FormKiQ Document Stack API</a>.
-    </h3>
+<div class="relative bg-white overflow-hidden mx-4">
+  <div class="mt-8">
+    <div class="max-w-screen-xl mx-auto relative">
+      <h2 class="text-3xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-4xl mb-4">
+        FormKiQ Stacks Console
+      </h2>
+      <section class="lg:w-full mb-12">
+        <p class="mt-3 text-base text-gray-700 sm:mt-5 sm:text-lg md:mt-5 md:text-xl lg:mx-0">
+          You can
+          <a [routerLink]="['/documents']" class="font-black hover:text-orange-600">
+          search documents</a>
+          or
+          <a [routerLink]="['/documents/add']" class="font-black hover:text-orange-600">
+          add new documents</a>
+          to the Document Stack, as well as
+          <a [routerLink]="['/api']" class="font-black hover:text-orange-600">
+          explore the FormKiQ Document Stack API</a>.
+        </p>
+      </section>
+    </div>
+  </div>
 </div>
